# node-ffi-demo

./: .editorconfig  .gitignore  CMakeLists.txt  build-gyp-vc.bat  build-msvc.bat  build.bat  ffi.js  node.gyp  package.json  run-build.bat  run-copy.bat  run-debug.bat  run-node-build.bat  test-call.cc  test-windows.cc
.github/workflows/: test-linux-arm64.yml  test-linux-x64.yml  test-mac-arm64.yml  test-mac-x64.yml  test-windows-arm64.yml  test-windows-x64.yml
config/linux/arm64/: fficonfig.h
config/linux/x64/: fficonfig.h
config/mac/arm64/: fficonfig.h
config/mac/x64/: fficonfig.h
debug/: PR.md  demo-ffi.js  node_debug1.cc  node_ffi.cc  node_ffi.h
demo2/: CMakeLists.txt  build.bat  demo2.cc  demo2.gyp
libffi/: CMakeLists.txt  build.bat  libffi.gyp
libffi/fixed/: ffi.c  ffi.h  ffiasm.S  fficonfig.h  ffiload.c  ffiload.h  ffitarget.h  msvc_arm.asm  msvc_arm64.asm  msvc_generate.bat  msvc_generate_asm.bat  win32_x64.asm  win32_x86.asm
src/: configure.py  ffi.js  node.gyp  node.gypi  node_ffi.cc  node_ffi.h  vcbuild.bat
src/lib/: ffi.js
src/src/: node_binding.cc  node_ffi.cc  node_ffi.h  node_options.cc  node_options.h
